# Postupi-AI

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/: dependencies.py  healthcheck.py  main.py
apps/api/routes/: internal.py  system.py
apps/bot/: __init__.py  delivery.py  keyboards.py  main.py  presenters.py  runtime.py  service.py  target_api.py
apps/bot/handlers/: system.py
apps/worker/: __init__.py  healthcheck.py  hse_ingestion.py  itmo_ingestion.py  jobs.py  main.py
docs/: data_feasibility_audit.md  data_feasibility_matrix.csv  university_audit_report_template.md
infra/docker/: Dockerfile
infra/migrations/: env.py
infra/migrations/versions/: 0001_initial_schema.py  0002_stage3_campaign_year.py  0003_stage3_application_fk.py  0004_stage4_application_events.py  0005_stage5_forecast_identity.py  0006_stage7_notifications.py
tests/: conftest.py
tests/integration/: conftest.py  test_diff.py  test_forecasting.py  test_hse_fresh_ingestion.py  test_persistence.py  test_private_itmo_fixture.py
tests/unit/bot/: test_delivery.py  test_handlers.py  test_presenters.py  test_runtime.py  test_target_api.py
tests/unit/common/: test_config.py  test_uid.py
tests/unit/forecasting/: test_engine.py
tests/unit/notifications/: test_policy.py  test_service.py
tests/unit/parsers/: test_hse.py  test_hse_client.py  test_itmo.py  test_storage.py
tests/unit/worker/: test_jobs.py  test_notification_jobs.py
