[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "postupi-ai"
version = "0.1.0"
description = "Production-oriented public admissions data platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiogram>=3.26,<4",
  "arq==0.26.3",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<6",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=25,<26",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = "(^tests/|^infra/)"
